# mermaid_gantt

./: LICENSE  README.md  pyproject.toml
mermaid_gantt/: app.py  gantt_chart.py  parser.py
