[tool.poetry]
name = "mermaid-gantt"
version = "0.1.0"
description = ""
authors = ["refv-mba <ren7001s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
plotly = "^5.22.0"
pandas = "^2.2.2"
streamlit = "^1.35.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
